# newscore

./: .cursorrules  .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml
backend/: .cursorrules
backend/shared/: .cursorrules  pyproject.toml
backend/shared/newscore_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/shared/shared/: __init__.py
backend/shared/shared/core/: __init__.py  audit.py  auth.py  cache.py  cache_invalidation.py  cache_listener.py  constants.py  cors.py  db.py  events.py  exceptions.py  fastapi_handlers.py  feature_flags.py  file_storage.py  geo_catalog.py  health.py  indexes.py  layout_ensure.py  logger.py  markets.py  pagination.py  placement_events.py  regions.py  request_context.py  rest_app.py  view_state.py
backend/shared/shared/helpers/: __init__.py  html_sanitize.py
backend/shared/shared/models/: __init__.py  article.py  category.py  common.py  layout.py  market.py  media_asset.py  region.py  user.py
backend/shared/shared/read/: __init__.py  article_reads.py  collections.py  layout_reads.py  loaders.py  market_reads.py  media_reads.py  placement_reads.py  site_reads.py  slot_pinned_ids.py
backend/shared/shared/repositories/: __init__.py  article_repository.py  region_repository.py  slot_repository.py
backend/shared/shared/schemas/: __init__.py  article_schemas.py  category_schemas.py  common.py  layout_schemas.py  media_schemas.py  region_schemas.py  user_schemas.py  workflow_schemas.py
docs/: ARCHITECTURE_IMPLEMENTATION_PLAN.md  GRAPHQL.md  MULTI_MARKET_PLAN.md  backend-apps.md  editorial-state-management.md  graphql-federation-plan.md  (+1 more)
(+334 files in other folders)
