[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newscore-shared"
version = "0.1.0"
description = "Shared infrastructure and data contracts for NewsCore."
requires-python = ">=3.12"
dependencies = [
  "motor>=3.4",
  "pydantic[email]>=2.6",
  "python-jose[cryptography]>=3.3",
  "redis[asyncio]>=5.0",
  "python-multipart>=0.0.9",
  "nh3>=0.2",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["F"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "backend/shared:backend/admin_app:backend/news_storage_app:backend/layout_admin_app"

